# vinsfusion-clean

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  package.xml
.devcontainer/: devcontainer.json
camera_models/: CMakeLists.txt
camera_models/include/camodocal/calib/: CameraCalibration.h
camera_models/include/camodocal/camera_models/: CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h
camera_models/include/camodocal/chessboard/: Chessboard.h  ChessboardQuad.h
camera_models/include/camodocal/gpl/: EigenQuaternionParameterization.h  EigenUtils.h  gpl.h
camera_models/src/: intrinsic_calib.cc
camera_models/src/calib/: CameraCalibration.cc
camera_models/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc
camera_models/src/chessboard/: Chessboard.cc
camera_models/src/gpl/: EigenQuaternionParameterization.cc  gpl.cc
config/: vins_rviz_config.rviz
docker/: Dockerfile  run.sh  run_podman.sh
eval/: eval_euroc.sh  eval_m3ed.sh
global_fusion/: CMakeLists.txt
global_fusion/src/: Factors.h  globalOpt.cpp  globalOpt.h  globalOptNode.cpp
include/DBoW/: DBoW2.h  FBrief.h  FeatureVector.h  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h  VocabularyBinary.hpp
include/DUtils/: DException.h  DUtils.h  Random.h
include/DVision/: DVision.h
include/camodocal/calib/: CameraCalibration.h
include/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h
include/camodocal/chessboard/: ChessboardQuad.h  Spline.h
include/camodocal/gpl/: EigenQuaternionParameterization.h  EigenUtils.h
include/camodocal/sparse_graph/: Transform.h
include/global_fusion/: Factors.h  globalOpt.h  tic_toc.h
include/loop_fusion/: keyframe.h  parameters.h  pose_graph.h
include/loop_fusion/utility/: CameraPoseVisualization.h  tic_toc.h  utility.h
include/vins_estimator/estimator/: estimator.h  feature_manager.h  parameters.h
include/vins_estimator/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
include/vins_estimator/featureTracker/: feature_tracker.h  feature_tracker_log.h  feature_tracker_mono.h  klt_tracker.h
include/vins_estimator/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
include/vins_estimator/utility/: CameraPoseVisualization.h  tic_toc.h  utility.h  visualization.h
launch/: vins.launch
loop_fusion/: CMakeLists.txt
loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
pyloader/: Makefile  kltpy.py  mymodule.pyx  pyloader.c  python_paths.h  tracker.py
src/DBoW/: BowVector.cpp  FBrief.cpp  FeatureVector.cpp  QueryResults.cpp  ScoringObject.cpp  VocabularyBinary.cpp
src/DUtils/: Random.cpp  Timestamp.cpp
src/DVision/: BRIEF.cpp
src/GeographicLib/: Geocentric.cpp  LocalCartesian.cpp  Math.cpp
src/camodocal/: intrinsic_calib.cc
src/camodocal/calib/: CameraCalibration.cc
src/camodocal/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc
src/camodocal/chessboard/: Chessboard.cc
src/camodocal/gpl/: EigenQuaternionParameterization.cc  gpl.cc
src/camodocal/sparse_graph/: Transform.cc
src/global_fusion/: globalOpt.cpp
src/loop_fusion/: keyframe.cpp  parameters.cpp  pose_graph.cpp  pose_graph_node.cpp
src/loop_fusion/utility/: CameraPoseVisualization.cpp  utility.cpp
src/node/: node_global_fusion.cpp  node_kitti_gps.cpp  node_kitti_odom.cpp  node_loop_fusion.cpp  node_ros.cpp
src/vins_estimator/: node_kitti_gps.cpp
src/vins_estimator/estimator/: estimator.cpp  feature_manager.cpp  parameters.cpp
src/vins_estimator/factor/: marginalization_factor.cpp  pose_local_parameterization.cpp  projectionOneFrameTwoCamFactor.cpp  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameTwoCamFactor.cpp  projection_factor.cpp
src/vins_estimator/featureTracker/: feature_tracker.cpp  feature_tracker_log.cpp  feature_tracker_mono.cpp  klt_tracker.cpp
src/vins_estimator/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
src/vins_estimator/utility/: CameraPoseVisualization.cpp  utility.cpp  visualization.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  node_kitti_gps.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp
vins_estimator/src/utility/: CameraPoseVisualization.cpp  tic_toc.h  visualization.cpp  visualization.h
