<?xml version="1.0"?>
<package format="2">
  <name>vins</name>
  <version>0.0.1</version>
  <description>Monolithic VINS package containing multiple modules</description>

  <maintainer email="qintonguav@gmail.com">qintong</maintainer>
  <license>GPLv3</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- System dependencies -->
  <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>Ceres</build_export_depend>
  <build_export_depend>Eigen3</build_export_depend>

  <export>
  </export>
</package>
